add favicon and change app name

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Bilingual Baby Name Finder</title>
+    <title>Bilingual Baby</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
